<?xml version="1.0"?>
<package format="3">
  <name>ypspur_mqtt</name>
  <version>0.0.0</version>
  <description>
    MQTT wrapper for YP-spur
  </description>
  <maintainer email="amsl@todo.todo">amsl</maintainer>
  <license>TODO</license>

  <buildtool_depend>cmake</buildtool_depend>
  <build_depend>mosquitto-dev</build_depend>
  <build_depend>mqttclass</build_depend>
  <exec_depend>mosquitto</exec_depend>
  <depend>ypspur</depend>

  <export>
    <build_type>cmake</build_type>
  </export>
</package>
